# audio-search

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/adr/: 0001-python-runtime.md  0002-shipped-transcripts.md  0003-embedding-models.md  0004-vector-store-lancedb.md  0005-fusion-rrf.md  0006-eval-transcript-as-gold.md  0007-ingestion-batched-sync.md  0008-api-http-plus-cli.md  0009-stretch-and-future-work.md
docs/agents/: domain.md
eval/: hand_probes.json  results.json
src/audio_search/: api.py  cli.py  config.py  embed.py  eval.py  index.py  ingest.py  search.py
src/audio_search/adapters/: __init__.py  base.py  esc50.py  fleurs.py  librispeech.py
tests/: test_rrf.py
