[project]
name = "audio-search"
version = "0.1.0"
description = "Hybrid text + audio embedding search over CommonVoice / LibriSpeech with RRF fusion and transcript-as-gold eval."
readme = "README.md"
authors = [
    { name = "Divya Prakash", email = "divya.prakas@gmail.com" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "sentence-transformers>=3.0",
    "transformers>=4.40",
    "torch>=2.2",
    "torchaudio>=2.2",
    "librosa>=0.10",
    "soundfile>=0.12",
    "datasets>=2.18",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "typer>=0.12",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "numpy>=1.26,<2.0",
    "pandas>=2.2",
    "rich>=13",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
    "lancedb>=0.13",
    "pyarrow>=15",
    "torchcodec>=0.12.0",
]

[project.scripts]
audio-search = "audio_search.cli:app"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
